# lilith

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
src/lilith/: __main__.py
src/lilith/console/: application.py  utils.py
src/lilith/console/commands/: build.py
src/lilith/core/: code_file_splitting.py  code_tree.py  utils.py
src/lilith/database/: database.py  utils.py
src/lilith/lilith_server/: test.py
src/lilith_server/: test.py
tests/: code_tree.py  main.py  utils.py  xd.py
